W8/errors.txt
w8_p2_prof.cpp: In function ‘void dumpFileAsHex(const char*)’:
w8_p2_prof.cpp:113:64: error: ‘setfill’ is not a member of ‘std’; did you mean ‘fill’?
  113 |  std::cout << "File size in bytes: [ " << file.tellg() << std::setfill('0') << std::hex;
      |                                                                ^~~~~~~
      |                                                                fill
w8_p2_prof.cpp:118:32: error: ‘setw’ is not a member of ‘std’
  118 |    std::cout << " ]\n" << std::setw(4) << (1 + cnt / 20) << ": [";
      |                                ^~~~
w8_p2_prof.cpp:119:28: error: ‘setw’ is not a member of ‘std’
  119 |   std::cout << " " << std::setw(2) << static_cast<unsigned short>(c);
      |                            ^~~~
w8_p2_prof.cpp:123:28: error: ‘setfill’ is not a member of ‘std’; did you mean ‘fill’?
  123 |  std::cout << " ]" << std::setfill(' ') << std::dec;
      |                            ^~~~~~~
      |                            fill
